# diesel_embedded

./: Cargo.toml  README.md
.cargo/: config.toml
.github/workflows/: build.yml
src/: main.rs
